src/styles/main.css
@font-face {
  font-family: 'Oswald';
  src:
    url('../assets/fonts/Oswald/Oswald-Regular.woff2') format('woff2'),
    url('../assets/fonts/Oswald/Oswald-Regular.woff') format('woff');
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: 'Inter';
  src:
    url('../assets/fonts/Inter/Inter-Medium.woff2') format('woff2'),
    url('../assets/fonts/Inter/Inter-Medium.woff') format('woff');
  font-weight: 500;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src:
    url('../assets/fonts/OpenSans/OpenSans-Regular.woff2') format('woff2'),
    url('../assets/fonts/OpenSans/OpenSans-Regular.woff') format('woff');
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src:
    url('../assets/fonts/OpenSans/OpenSans-SemiBold.woff2') format('woff2'),
    url('../assets/fonts/OpenSans/OpenSans-SemiBold.woff') format('woff');
  font-weight: 600;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src:
    url('../assets/fonts/OpenSans/OpenSans-Bold.woff2') format('woff2'),
    url('../assets/fonts/OpenSans/OpenSans-Bold.woff') format('woff');
  font-weight: 700;
  font-display: swap;
}

:root {
  /* Базовые цвета */
  --color-white: #fff;
  --color-black: #000;

  /* Серые оттенки */
  --color-gray-100: #fafafa;
  --color-gray-200: #eef4ff;
  --color-gray-500: #777;
  --color-gray-800: #26292d;
  --color-gray-900: #171718;

  /* Синяя палитра */
  --color-blue-100: #eef4ff;
  --color-blue-300: #3073c5;
  --color-blue-400: #3538cd;
  --color-blue-500: #0e4ad1;
  --color-blue-700: #0058a7;

  /* Красная палитра */
  --color-red-100: #fdf2fa;
  --color-red-500: #c11574;
/*
  /* Радиусы */
  --border-radius-s: 8px;

  --box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
  --gradient: linear-gradient(
    to right,
    rgba(0, 98, 185, 0.8),
    rgba(0, 98, 185, 0.8)
  );

   /* --color-black-100: #171718; */
  /* --color-black-200: #26292d; */
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

button:focus,
a:focus {
  outline: none;
}

button {
  border: none;
  cursor: pointer;
}

body {
  min-width: 320px;
  font-family: 'Open Sans', sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.2;
  background-color: var(--color-white);
}

img {
  width: 100%;
  vertical-align: middle;
}

/* General */

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.container {
  max-width: 120rem;
  margin: 0 auto;
}

.layout-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

::-webkit-scrollbar {
  display: none;
}

@media only screen and (max-width: 98.25em) {
  html {
    font-size: 56%;
  }

  .container {
    width: 95%;
  }
}

@media only screen and (max-width: 56.25em) {
  html {
    font-size: 56%;
  }
}

@media only screen and (max-width: 37.5em) {
  html {
    font-size: 59%;
  }

  .container {
    width: 90%;
  }
}

@media only screen and (min-width: 112.5em) {
  html {
    font-size: 65%;
  }
}

